[package]
name = "Pi_Transmit"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
tungstenite = "0.26.2"
threadpool = "1.8.1"
rayon = "1.1"
toml = "0.8.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
serde_json = "1.0.14"
